# Cal-FEUP

./: CMakeLists.txt  LICENSE  README.md
files/HealthStation/: healthStation.txt
files/NursingHome/: nursingHome.txt
files/Vehicles/: vehicles.txt
files/maps/: safePoints.txt  window.txt
files/maps/16x16/: nodes.txt  tags_16x16.txt
files/maps/16x16ori/: edges.txt  nodes.txt  tags_16x16.txt
files/maps/4x4/: tags_16x16.txt
files/maps/Ermesinde/: tags_ermesinde.txt
files/maps/Porto/: nodes.txt  tags_porto.txt
files/maps/Porto-2/: tags.txt
map_1/: addresses.csv  admin_units_level8.csv  admin_units_level9.csv  amenity_points.csv  amenity_polygons.csv  bridges.csv  buildings.csv  forests.csv  landcover.csv  power_line_columns.csv  power_lines.csv  railways.csv  roads.csv  stations.csv  trees.csv  tunnels.csv  water_areas.csv  water_lines.csv
src/: main.cpp
src/Emirita/: Elderly.cpp  Elderly.h  EmeritaHealth.cpp  EmeritaHealth.h  GraphWorkout.cpp  GraphWorkout.h  HealthCare.cpp  HealthCare.h  HealthStation.cpp  HealthStation.h  NursingHome.cpp  NursingHome.h  Vehicle.cpp  Vehicle.h
src/Graph/: Graph.h
src/GraphViewer/: graphviewer.cpp
src/Main/: ConectPoints.cpp  ConectPoints.h  ConnectPoints.h  EmeritaHealth.cpp  EmeritaHealth.h  Main.cpp  MapPoint.cpp  MapPoint.h
src/Map/: ConnectPoints.cpp  MapPoint.cpp  MapPoint.h
src/Menu/: Menu.cpp  Menu.h
src/Utilities/: ReadFiles.cpp  ReadFiles.h
